--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,18 +32,20 @@ services:
       - "8080:8080"
     depends_on:
       - ewm-db
+      - stats-server
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewm
       - SPRING_DATASOURCE_USERNAME=root
       - SPRING_DATASOURCE_PASSWORD=root
-      - STATS-SERVER_URL=http://stats-server:9090
+      - STATS_SERVER_URL=http://stats-server:9090
 
   ewm-db:
     image: postgres:13.7-alpine
-    container_name: postgres-ewm-db
+    container_name: ewm-db
     ports:
       - "6542:5432"
     environment:
       - POSTGRES_DB=ewm
-      - POSTGRES_NAME=root
+      - POSTGRES_USER=root
       - POSTGRES_PASSWORD=root
+      - TZ:Europe/Moscow
